# universal-ai-dev-assistant

./: .env.example  .env.production.example  .gitignore  ACADEMIC_RESEARCH_OPPORTUNITIES.md  ADVANCED_DEVELOPMENT_ROADMAP.md  API_TESTING_STATUS.md  APOLOGY_AND_RESTORATION.md  BUILD_OPTIMIZATION_COMPLETE.md  CHANGELOG.md  CLI_INSTALLATION_GUIDE.md  COMPETITIVE_ADVANTAGE_ANALYSIS.md  COMPETITOR_ANALYSIS.md  COMPLETE_USER_GUIDE.md  COMPREHENSIVE_PROJECT_DOCUMENTATION.md  CONTRIBUTING.md  DAY_0_COMPLETION_SUMMARY.md  DEMO.md  DEMO_SHOWCASE.md  DEPLOYMENT_READY_STATUS.md  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_STATUS.md  Dockerfile  FEATURE_SHOWCASE_v0.3.md  FINAL_COMPLETION_SUMMARY.md  FINAL_FEATURE_SUMMARY.md  FINAL_GITHUB_ACTIONS_FIX.md  FINAL_GITHUB_UPDATE.md  FINAL_PROJECT_SUMMARY.md  FINAL_RELEASE_SUMMARY_v0.5.md  FINAL_SUCCESS_STATUS.md  FINAL_UPDATE_SUMMARY.md  GITHUB_ACTIONS_FINAL_FIX.md  GITHUB_DEPLOYMENT_GUIDE.md  GITHUB_FIXES.md  GITHUB_PUSH_COMMANDS.md  GITHUB_UPDATE_GUIDE.md  GITHUB_UPLOAD_GUIDE.md  LICENSE  MILESTONE_1_ISSUES.md  MILESTONE_1_STATUS_UPDATE.md  (+34 more)
.github/: FUNDING.yml  pull_request_template.md
backend/: .env.example  .sqlxrc  Cargo.toml  Dockerfile  README.md  sqlx-data.json
backend/config/: default.toml  development.toml  production.toml
backend/migrations/: 001_create_users_table.sql  001_initial_schema.sql  002_create_projects_table.sql  003_create_runs_table.sql  004_create_artifacts_table.sql  005_create_completion_logs_table.sql  006_create_sessions_table.sql  007_create_provider_metrics_table.sql  008_create_api_keys_table.sql  009_create_user_preferences_table.sql  010_create_organizations_table.sql
backend/src/: config.rs  language_server.rs  lib.rs  main.rs  models.rs
backend/src/agents/: advanced_risk.rs  advanced_test_generator.rs  agent_communication.rs  agent_loop.rs  agent_personality.rs  autonomous_bug_fixer.rs  autonomous_evolution.rs  build_doctor.rs  code_reviewer.rs  codegen.rs  development_mentor.rs  dynamic_agent_factory.rs  immersive_developer.rs  knowledge_mesh.rs  mod.rs  multi_language_security.rs  natural_language_programmer.rs  orchestrator.rs  planner.rs  retriever.rs  reviewer.rs  risk.rs  risk_gate.rs  security_analyzer.rs  test_first.rs  testgen.rs  visual_programmer.rs
backend/src/ai_engine/: adaptive_learning.rs  ai_pair_programming.rs  code_evolution.rs  code_smell_detector.rs  code_time_travel.rs  competitive_programming_arena.rs  cost_optimizer.rs  emotional_ai_programming.rs  intelligent_autocomplete.rs  mod.rs  model_manager.rs  multi_agent_system.rs  musical_code_composition.rs  natural_language_programming.rs  ollama_integration.rs  predictive_debugging.rs  quantum_code_optimization.rs  real_time_completion.rs
backend/src/ai_engine/providers/: heuristic.rs  mod.rs  ollama.rs  router.rs  traits.rs
backend/src/analytics/: advanced_dashboard.rs
backend/src/api/: agents.rs  auth.rs  bug_fixer.rs  collaboration.rs  completion.rs  mentor.rs  mod.rs  v1.rs  visual_programming.rs
backend/src/auth/: api_key_manager.rs  audit.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  organization.rs  preferences.rs  preferences_handlers.rs  rbac.rs  sso.rs  user_service.rs
backend/src/cache/: memory_cache.rs  mod.rs
backend/src/code_review/: ai_code_review.rs
backend/src/collaboration/: code_review_ai.rs  mod.rs  real_time_collaboration.rs  real_time_hub.rs  team_sync.rs
backend/src/config/: feature_flags.rs
backend/src/context/: ast_graph.rs  embeddings.rs  mod.rs  repo_scan.rs  selection.rs
backend/src/conversation/: code_integration.rs  context_manager.rs  conversation_service.rs  intent_analyzer.rs  mod.rs  session_manager.rs  workspace_analyzer.rs
backend/src/database/: mod.rs
backend/src/database/repositories/: artifacts.rs  completion_logs.rs  mod.rs  runs.rs
backend/src/database/tuning/: mod.rs
backend/src/documentation/: ai_documentation.rs
backend/src/embeddings/: embedding_engine.rs  mod.rs  vector_store.rs
backend/src/enterprise/: audit_logger.rs  mod.rs
backend/src/evals/: evaluator.rs  mod.rs  publisher.rs  suites.rs
backend/src/integrations/: enterprise_hub.rs
backend/src/observability/: metrics.rs  mod.rs  tracing.rs
backend/src/performance/: connection_pool.rs  cpu_optimizer.rs  memory_manager.rs  mod.rs  optimization_engine.rs
backend/src/project_scaffolding/: smart_scaffolding.rs
backend/src/providers/: anthropic.rs  cohere.rs  cost_calculator.rs  google.rs  groq.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  openrouter_streaming.rs  router.rs  streaming_traits.rs  together.rs  traits.rs
backend/src/risk/: coverage_analyzer.rs  mod.rs  performance_analyzer.rs  risk_calculator.rs  risk_gate.rs
backend/src/sandbox/: docker_runner.rs  go.rs  mod.rs  node.rs  python.rs  rust_runner.rs
backend/src/search/: code_indexer.rs  embedding_manager.rs  mod.rs  query_processor.rs  result_ranker.rs  search_service.rs  semantic_engine.rs
backend/src/security/: mod.rs
backend/src/services/: mod.rs  security_scanner.rs
backend/src/streaming/: mod.rs
backend/src/terminal/: ai_terminal.rs  command_suggester.rs  history_manager.rs  mod.rs  shell_integration.rs
backend/tests/: integration_tests.rs
backend/tests/fixtures/node_toy/: index.js  index.test.js  package.json
backend/tests/fixtures/py_toy/: main.py  test_main.py
cli/: Cargo.toml
cli/src/: client.rs  config.rs  main.rs  ui.rs
cli/src/commands/: analyze.rs  chat.rs  complete.rs  dev.rs  doc.rs  explain.rs  fix.rs  index.rs  init.rs  mod.rs  providers.rs  refactor.rs  search.rs  status.rs  terminal.rs  test.rs  translate.rs
config/: default.toml
docs/: API.md  GETTING_STARTED.md
examples/: working_demo.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
ide-launcher/: Cargo.toml
ide-launcher/src/: main.rs
ide-launcher/src-tauri/: tauri.conf.json
infra/: prometheus.yml
k8s/: backend.yaml  configmap.yaml  deploy.sh  frontend.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  postgres.yaml
mobile/: App.tsx  package.json
scripts/: build_and_test.sh  deploy.sh  install.sh  (+2 more)
(+62 files in other folders)
