[package]
name = "universal-ai-dev-assistant"
version = "0.1.0"
edition = "2021"
authors = ["Universal AI Team <team@universalai.dev>"]
description = "Privacy-focused, local AI-powered development assistant"
license = "MIT"
repository = "https://github.com/Tehlikeli107/universal-ai-dev-assistant"
keywords = ["ai", "development", "assistant", "code", "completion"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Core web framework
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true