[package]
name = "universal-ai-dev-assistant"
version = "6.2.0"
edition = "2021"
authors = ["Universal AI Team <team@universalai.dev>"]
description = "Advanced AI-powered development assistant with multiple provider support"
license = "MIT"
repository = "https://github.com/Tehlikeli107/universal-ai-dev-assistant"
keywords = ["ai", "development", "assistant", "code", "completion", "openrouter"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Core web framework
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "stream"] }

# Configuration and environment
config = "0.14"
dotenvy = "0.15"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database (for caching and analytics)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }

# Security and rate limiting
jsonwebtoken = "9.2"
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.21"
bcrypt = "0.15"
# tower_governor = "0.1"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Text processing
regex = "1.10"
tiktoken-rs = "0.5"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true