[package]
name = "uaida-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Command-line interface for Universal AI Development Assistant"
license = "MIT"

[[bin]]
name = "uaida"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "color"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
colored = "2.0"
indicatif = "0.17"
dialoguer = "0.11"
dirs = "5.0"
toml = "0.8"
walkdir = "2.3"
ignore = "0.4"