[package]
name = "uaida-ide"
version = "6.2.0"
edition = "2021"
authors = ["Universal AI Team <team@universalai.dev>"]
description = "Standalone IDE for Universal AI Development Assistant"
license = "MIT"
repository = "https://github.com/Tehlikeli107/universal-ai-dev-assistant"

[[bin]]
name = "uaida-ide"
path = "src/main.rs"

[dependencies]
# GUI framework
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Utilities
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# File operations
walkdir = "2.3"
ignore = "0.4"

# Configuration
dirs = "5.0"
toml = "0.8"

# Text processing
regex = "1.10"
syntect = "5.1"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }